# figma-to-code

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: build_assemble.py  build_block.py
agents/response/: formats.py
config/: settings.py
data/: image.py  load_data.py  models.py  preprocess_figma.py
docs/: 01_core_methods.md  02_config_settings.md  04_image_utils.md  05_models.md  06_agents.md  07_providers.md  3_data_loading.md  API.md  API_REFERENCE.md  INDEX.md  INSTALLATION.md  README.md  USAGE.md
prompts/: assemble_system.md  block_system.md
providers/: anthropic.py  google.py  ollama.py  openai.py
