[project]
name = "figma-to-code"
version = "0.1.0"
description = "Figma to Code Converter using LangChain"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "pydantic>=2.10.0",
    "pillow>=11.0.0",
    "pytest>=8.3.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python-version = "3.10"
warn_return_any = true
warn_unused_configs = true